src/app/app.component.scss
@import "../variables.scss";

.app-body {
  margin: 0 auto;
  border-radius: 1000px;
  max-width: 1280px;
  justify-items: center;
  align-items: center;
}

* {
  box-sizing: border-box;
}

a {
  font-weight: 300;
  color: #9498a7;
}

a {
  text-decoration: none;
}

h1 {
  padding: 170px 0 100px;
  font-size: 2.4em;
  color: #35394b;
}

nav {
  position: sticky;
  width: 100%;
  text-align: center;
  padding: 10px;
  line-height: 50px;
  background: none;
  overflow: hidden;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  z-index: 1;
}
nav > a {
  padding: 0 1.25rem;
  margin: 0.75rem 0.625rem;
  display: inline-block;
  border: 1px solid #9498a7;
  border-radius: 0.5rem;
  transition: 0.3s ease-in-out;
  @media (max-width: 640px) {
    font-size: 0.75rem;
  }
  &:hover {
    transform: scale(1.1);
    border-color: $artyclick-amber;
    box-shadow: 0 0.1rem 1rem $artyclick-amber;
    background-color: $artyclick-amber;
    color: white;
    font-weight: bold;
  }
}

.magic-mode-global.scrolled {
  background-color: $dark-pastel-purple;
  color: $artyclick-amber;
  a {
    color: white;
    border: 1px solid white;
    &:hover {
      border: none;
    }
  }
}
.scrolled {
  background-color: $alice-blue;
  top: 0px;
  justify-content: center;
  align-items: center;
  display: grid;
  grid-template-columns: repeat(4, auto);
}

@media (min-width: 640px) {
  .scrolled {
    grid-template-columns: 1fr repeat(3, auto) 1fr;
  }
  .scrolled a:nth-child(1) {
    grid-column-start: 2;
  }
  .slider-container {
    margin-left: auto;
    margin-right: 2rem;
  }

  #wizard-hat {
    margin-left: 0.5rem;
  }
}

@media (max-width: 640px) {
  mat-slide-toggle {
    transform: scale(0.75);
  }
}

// credits: https://www.w3schools.com/howto/howto_css_overlay.asp
.overlay {
  position: fixed; /* Sit on top of the page content */
  width: 100%; /* Full width (cover the whole page) */
  height: 100%; /* Full height (cover the whole page) */
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 1); /* Black background with opacity */
  z-index: 9; /* Specify a stack order in case you're using a different order for other elements */
  margin: auto;
}

.overlay-done {
  transition: 0.3s ease-in-out;
  opacity: 0;
  z-index: -1;
}

.magic-typewriter-container {
  position: absolute;
  top: 50%;
  left: 50%;
  color: $artyclick-amber;
  font-family: "halloween", sans-serif;
  p {
    font-family: "montserrat", sans-serif;
    color: white;
    font-size: 0.75rem;
    font-style: italic;
    opacity: 0.8;
  }
  text-align: center;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

#magic-typewriter {
  @media (min-width: 640px) {
    white-space: nowrap;
    font-size: 1.75rem;
  }
  @media (min-width: 1024px) {
    font-size: 3rem;
  }
}

